# Four-Fund-Portfolio-Planner

./: .dockerignore  Dockerfile  Four Fund Portfolio Builder Prompt.txt  PLANNING.md  README.md  TASK.md  app.py  calculator.py  cline_global_rules.txt  data_fetcher.py  docker-compose.yml  docker_procedure.md  docker_subdomain_procedure.md  portfolio_config.json  pyproject.toml  requirements.txt  visualizer.py
data/: historical_fund_data.csv  historical_fund_data_old.csv  historical_fund_data_sav.csv
four_fund_portfolio_planner.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_app_logic.py  test_calculator.py  test_data_fetcher.py  test_visualizer.py  test_yf_utilities.py
