[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "four_fund_portfolio_planner"
version = "0.1.0"
# Add other metadata if desired, like authors, description, etc.
# Specify dependencies if not solely relying on requirements.txt
# dependencies = [
#     "streamlit",
#     "pandas",
#     # ... other dependencies
# ]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory
exclude = ["tests*"] # Exclude the tests directory from the package itself
